added event update endpoint
